force-app/main/default/objects/Report_Finder_Item_Usage__c/Report_Finder_Item_Usage__c.object-meta.xml
<CustomObject>
    <label>Report Finder Item Usage</label>
    <nameField>
        <displayFormat>RFIU-{0}</displayFormat>
        <label>Report Finder Item Usage #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder Item Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>