force-app/main/default/objects/Report_Finder_Item_Usage__c/fields/Accessed_By__c.field-meta.xml
<CustomField>
    <fullName>Accessed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Report_Finder_Item_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>