force-app/main/default/objects/Report_Finder_Item_Usage__c/fields/Accessed_Date__c.field-meta.xml
<CustomField>
    <fullName>Accessed_Date__c</fullName>
    <label>Accessed Date</label>
    <type>DateTime</type>
</CustomField>