force-app/main/default/objects/Report_Finder_Item_Usage__c/fields/Report_Finder_Item__c.field-meta.xml
<CustomField>
    <fullName>Report_Finder_Item__c</fullName>
    <label>Report Finder Item</label>
    <referenceTo>Report_Finder_Item__c</referenceTo>
    <relationshipLabel>Report Finder Item Usages</relationshipLabel>
    <relationshipName>Report_Finder_Item_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>